add posthoc assumptions plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,11 @@
 S3method(plot,oneway)
 S3method(print,oneway)
 S3method(summary,oneway)
+export(assumptions)
 export(oneway)
+export(posthoc)
 import(dplyr)
 import(ggplot2)
+import(ggridges)
+import(patchwork)
+import(stats)
