--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,oneway)
 export(assumptions)
 export(oneway)
 export(posthoc)
+export(report)
 import(dplyr)
 import(ggplot2)
 import(ggridges)
