--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(posthoc)
 export(report)
 import(dplyr)
 import(ggplot2)
-import(ggridges)
 import(patchwork)
+import(rmarkdown)
 import(stats)
+importFrom(ggridges,geom_density_ridges)
+importFrom(ggridges,theme_ridges)
