--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: oneway
 Title: One-way Analysis of Variance
 Version: 0.0.1
 Authors@R: 
-    person(given = "Robert",
-           family = "Kabacoff",
+    person(given = "QAC 356",
+           family = "Students",
            role = c("aut", "cre"),
            email = "rkabacoff@wesleyan.edu")
 Description: This package assesses group differences using parametric
@@ -14,11 +14,13 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
-    knitr,
-    rmarkdown
+    knitr
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 Imports: 
     dplyr,
-    ggplot2
+    ggplot2,
+    ggridges,
+    patchwork,
+    rmarkdown
